tests/e2e/list_index_values2.error
Error: syntax error in story at line 1

1|    a = [1, 2, 3][0][1]
      ^^^^^^^^^^^^^^^^^^^

E0104: `int` can't be indexed with `1` of type `int`
